Portfolio Press 0.7.6

- Updated Spanish translations from Eduardo Larequi

Portfolio Press 0.7.5

- Fixes menu placement option
- Fixes menu styling for widget areas
- Fixes styling in iOS devices
- Fixes left column layout in portfolio pages
- Updates icons in options panel
- Fixes for comment display on single.php
- Added option for displaying portfolio archives full width
- Merged css reset into main stylesheet

Portfolio Press 0.7.4

- Paging bug fixes when portfolio is set as home page
- Checkbox fixes for options panel
- Styling changes to selected menu parent in drop down
- Option for changing header color

Portfolio Press 0.7.3

- Better syntax for options conditionals
- Minor style updates as recommended by WordPress Theme Team
- Chinese translations by Sunny Lau
- Updated Spanish Translations from Eduardo Larequi
- Changed "current-page-parent" to "current-menu-parent" in css

Portfolio Press 0.7.2

- Changed image path in options.php back to get_bloginfo('template_url')
- Deleted styles folder
- Removed option to set portfolio as home.  Better done through core..

Portfolio Press 0.7

- Major updates to the options panel
- Minor updates to how Portfolio post type is set up
- Update to screenshot image

Portfolio Press 0.6.1

- Added Norwegian translations from Erling Hamso - http://www.erlinghamso.no
- Minor update to the 404 page from Michael Fields - http://wordpress.mfields.org

Portfolio Press 0.6

- Made further updates for WordPress 3.1 compatibility
- Added options panel (props WooThemes)
- Includes new options to upload logo, set menu position, update footer text, and more.

Portfolio Press 0.5.3

- Fixed pagination issue when portfolio template was set to home page
- Added portfolio icon designed by Ben Dunkle, core WordPress designer, Field 2 design, field2.com
- Added french translations from Wolforg at http://www.wptrads.fr/portfolio-press/
- Updated description to link to demonstration video and french translation note