@@ -1,6 +1,9 @@
 Portfolio Press 0.7.6
 
 - Updated Spanish translations from Eduardo Larequi
+- German translations by Sandro Bauer
+- Removed Simple Custom Post Type Archives Plugin
+- Added nag message if using lower than WordPress 3.1
 
 Portfolio Press 0.7.5
 
